Fixed caching and looking into flickering
Caching is good now and flickering is gone but not strange transition
bugs

--- a/RainDrops/style.css
+++ b/RainDrops/style.css
@@ -24,16 +24,32 @@
 	height: 500px;
 }
 
+#centreImg6  img{
+	-webkit-backface-visibility: hidden;
+}
+
+#centreImg5  img{
+	-webkit-backface-visibility: hidden;
+}
+
+#centreImg4  img{
+	-webkit-backface-visibility: hidden;
+}
+
+
 #centreImg1  img{
 	z-index:4;
+	-webkit-backface-visibility: hidden;
 }
 
 #centreImg2  img{
 	z-index:3;
+	-webkit-backface-visibility: hidden;
 }
 
 #centreImg3  img{
 	z-index:2;
+	-webkit-backface-visibility: hidden;
 }
 
 
